<?xml version="1.0"?>
<package format="2">
  <name>centaurus</name>
  <version>0.1.0</version>
  <description>centaurus</description>
  <maintainer email="alessandro.bona96@gmail.com">Alessandro Bonanni</maintainer>
  <license>Bho</license>

  <author>Franka Emika GmbH</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>xacro</exec_depend>
</package>
